# octiq-flow

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
.claude/skills/ship/: SKILL.md
.github/workflows/: pages.yml
brand/: README.md
docs/: canvas.md  octiq-bus.md  octiq-notify.md
docs/plans/: profiles.md
scripts/: check-js-syntax.sh  generate_brand_assets.py
scripts/hooks/: agent-session-capture.cjs  agent-session-capture.test.cjs
scripts/skills/octiq-canvas/: SKILL.md
site/: index.html
src/: agents.js  agentworld.js  alerts.js  browser.js  canvas.js  chat.js  commands.js  ctxmenu.js  dashboard.js  filepreview.js  filetabs.js  gitactions.js  gitdiff.js  icons.js  index.html  layout.js  main.js  modes.js  orchestrator.js  profiles.js  project.js  roles.js  roster.js  scheduler.js  settings.js  styles.css  terminals.js  usage.js  util.js  utilities.js  vault.js  webpreview.js  working.js  workspaces.js  world3d.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_resume.rs  agent_usage.rs  agents.rs  canvas.rs  dashboard.rs  focus.rs  fonts.rs  fsbrowse.rs  git.rs  git_watch.rs  lib.rs  main.rs  notify_hook.rs  paths.rs  proc.rs  profile.rs  pty.rs  runner.rs  schedules.rs  terminal_layout.rs  usage_limits.rs  utilities.rs  vault.rs  workspaces.rs
