[package]
name = "octiq-flow"
version = "0.1.0"
description = "Agent workflow orchestrator: run agents in a real terminal inside a desktop app"
authors = ["kyson"]
edition = "2021"
default-run = "octiq-flow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "octiq_flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
# Unlocks WKWebView's native refresh rate on macOS (lifts the 60fps rAF cap) via
# WebKit's private _features flag. No-op on Windows/Linux. Uses a private Apple
# API, so it is NOT Mac App Store safe — fine here since OctiqFlow ships as a .dmg.
tauri-plugin-macos-fps = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
# Fs watcher behind the sidebar's live git status (git_watch.rs).
notify = "8"
# Cross-platform low-level key listener behind the screenshot-vault hotkey
# (vault.rs). Distinguishes left/right modifiers, so "both Command keys" works;
# a normal global shortcut cannot. macOS uses a CGEventTap (needs Input
# Monitoring permission); Windows uses a low-level keyboard hook (no extra perm).
rdev = "0.5"
# Decode the cropped PNG the frontend sends back when saving a crop (vault.rs).
base64 = "0.22"
fontdb = "0.23.0"

# macOS-only: read the frontmost window's CoreGraphics id so the screenshot
# hotkey captures the active window (vault.rs). CoreGraphics itself is linked
# directly; these crates give the CoreFoundation array/dictionary wrappers.
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"

