[package]
name = "octiq-flow"
version = "0.1.0"
description = "Agent workflow orchestrator: run agents in a real terminal inside a desktop app"
authors = ["kyson"]
edition = "2021"
default-run = "octiq-flow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "octiq_flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
# Unlocks WKWebView's native refresh rate on macOS (lifts the 60fps rAF cap) via
# WebKit's private _features flag. No-op on Windows/Linux. Uses a private Apple
# API, so it is NOT Mac App Store safe — fine here since OctiqFlow ships as a .dmg.
tauri-plugin-macos-fps = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
# Fs watcher behind the sidebar's live git status (git_watch.rs).
notify = "8"
# Cross-platform low-level key listener behind the screenshot-vault hotkey
# (vault.rs). Distinguishes left/right modifiers, so "both Command keys" works;
# a normal global shortcut cannot. macOS uses a CGEventTap (needs Input
# Monitoring permission); Windows uses a low-level keyboard hook (no extra perm).
rdev = "0.5"
# Decode the cropped PNG the frontend sends back when saving a crop (vault.rs).
base64 = "0.22"
fontdb = "0.23"

# macOS-only: read the frontmost window's CoreGraphics id so the screenshot
# hotkey captures the active window (vault.rs). CoreGraphics itself is linked
# directly; these crates give the CoreFoundation array/dictionary wrappers.
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"

# Release builds ship as an unsigned .dmg, so the only things that matter here
# are size and speed — not incremental rebuild time (card 20).
[profile.release]
# Cross-crate inlining and dead-code elimination across the whole dependency
# graph. This is where most of the size win comes from, and it is why
# codegen-units drops to 1: more units means less for LTO to see at once.
lto = true
codegen-units = 1
# ~27k symbols shipped in the binary and none of them are read at runtime.
strip = "symbols"

# NOT set, deliberately:
#
#   panic = "abort"  — the card asked for it; it is wrong for this app. Each PTY
#     runs its own reader and emitter thread, and a panic in one of them
#     currently kills only that terminal. Under `abort` a single decode bug in
#     one background terminal takes the whole app down with it, skipping the
#     quit handshake that flushes every terminal's scrollback to disk. Trading
#     the user's unsaved output for a few hundred KB is a bad deal.
#
#   opt-level = "s"  — the card suggested trying it, with "keep 3 if terminal
#     throughput regresses". The PTY read/decode/scan path is the app's hot
#     loop, and there is no benchmark here to prove it does not regress, so the
#     default (3) stands. Revisit with a measurement, not a guess.

